--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="BTP Solutions est un site web d'une entreprise nomme BTP Solutions qui est specialisé dans le domaine construction des batiments dote des solutions innovantes et durables. ">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="BTP-solutions">
     <title>BTP Solutions</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -16,10 +20,13 @@
                 <li><a href="#a_propos">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+
+            <!-- menu responsive -->
+             <div class="toggle_menu"></div>
         </nav>
     </header>
     <main>
-        <!-- section heros -->
+        
        <section id="heros">
             <div class="hero-text">
                 <h1>Construisons ensemble des infrastructures durables avec BTP Solutions</h1>
@@ -27,7 +34,6 @@
                 <button type="submit">Contactez-nous</button>
             </div>
        </section>
-       <!-- section heros fin -->
 
         <section id="services">
            <h2>Nos Services</h2>
@@ -76,8 +82,8 @@
                         </div>
                         <img src="assets/images/quote-left-1.png" alt="image quote" class="quote">
                     </div>
-                    <p>Grâce à BTP Solutions, notre nouveau siège <br>social est un véritable succès. Leur <br>professionnalisme et leur souci du
-                    détail ont <br>été remarquables.</p>
+                    <p>Grâce à BTP Solutions, notre nouveau siège social est un véritable succès. Leur professionnalisme et leur souci du
+                    détail ont été remarquables.</p>
                 </div>
                 <div class="temoin">
                     <div class="div_haut">
@@ -110,41 +116,57 @@
         <section id="contact">
             <h2>Contactez-nous</h2>
            <div class="form_box">
-              <form action="#">
-                  <div class="input_nom">
-                     <input type="text" name="nom" id="nom" placeholder="Nom">
-                  </div>
-                  <div class="input_email">
-                     <input type="email" name="email" id="email" placeholder="Email">
-                  </div>
-                  <div class="texareat">
-                     <input type="textareat" name="message" id="message" placeholder="Message">
-                  </div>
-                  <button type="submit">Envoyer</button>
-              </form>
-           </div>
-           <div class="geolocalise">
-              <div>
-                Adresse email : <a href="#">contact@btpsolutions.com</a>
-                <p>Numéro de téléphone : +123 456 7890</p>
-              </div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43009359.39982239!2d-68.18800638286211!3d48.85662820000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1a66a35955853%3A0x3df6fc377741ba3b!2sBTP%20Solutions!5e0!3m2!1sfr!2s!4v1720274417956!5m2!1sfr!2s"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <form action="#">
+                    <div class="nom">
+                        <Label for="nom">Nom</Label>
+                        <input type="text" name="nom" id="nom" placeholder="Nom" maxlength="50" required>
+                    </div>
+                    <div class="email">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Email" maxlength="50" required>
+                    </div>
+                    <div class="textarea">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" placeholder="Message" rows="5" maxlength="200" required>Message</textarea>
+                    </div>
+                    <button type="submit">Envoyer</button>
+                </form>
+                <div class="maps">
+                    <div class="adressse_tel">
+                        Adresse email : <a href="#">contact@btpsolutions.com</a>
+                        <p>Numéro de téléphone : +123 456 7890</p>
+                    </div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43009359.39982239!2d-68.18800638286211!3d48.85662820000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c1a66a35955853%3A0x3df6fc377741ba3b!2sBTP%20Solutions!5e0!3m2!1sfr!2s!4v1720274417956!5m2!1sfr!2s"
+                        width="550" height="350"  style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
            </div>
         </section>
     </main>
     <footer>
-       <p>2005-2024, Tous Droits Reservés</p>
+       <div>
+             <p>&copy; 2005-2024, Tous Droits Reservés</p>
+       </div>
        <div class="twitter">
-          <img src="" alt="">
+          <img src="assets/images/twitter.png" alt="image Twitter">
           <p>Twitter</p>
        </div>
        <div class="link">
-           <img src="" alt="">
+           <img src="assets/images/linkedin.png" alt="image LinkedIn">
            <p>LinkedIn</p>
        </div>
     </footer>
+
+
+    <script>
+          let small_menu = document.querySelector('.toggle_menu')
+            let menu = document.querySelector('.menu')
+            small_menu.onclick = function () {
+                small_menu.classList.toggle('active');
+                menu.classList.toggle('responsive');
+            }
+    </script>
 </body>
 </html>
