Modification des fichiers

--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
               <div class="service">
                  <img src="assets/images/service-1.webp" alt="image service-1">
                  <h3>Construction de bâtiments</h3>
-                 <p>Des constructions robustes et esthétiques <br>pour tous vos besoins résidentiels, <br>commerciaux et industriels</p>
+                 <p>Des constructions robustes et esthétiques pour tous vos besoins résidentiels, commerciaux et industriels</p>
               </div>
               <div class="service">
                 <img src="assets/images/service-2.webp" alt=" image service-2">
                 <h3>Travaux publics</h3>
-                <p>Des infrastructures publiques fiables et <br>durables, incluant routes, ponts et <br>aménagements urbains.</p>
+                <p>Des infrastructures publiques fiables et durables, incluant routes, ponts et aménagements urbains.</p>
               </div>
               <div class="service">
                 <img src="assets/images/service-3.webp" alt="image service-3">
                 <h3>Rénovation et réhabilitation</h3>
-                <p>Redonnez vie à vos bâtiments avec nos <br>solutions de rénovation complètes et <br>innovantes.</p>
+                <p>Redonnez vie à vos bâtiments avec nos solutions de rénovation complètes et innovantes.</p>
               </div>
            </div>
         </section>
 
         <section id="a_propos">
             <h2>À propos de nous</h2>
-           <div class="container">
+           <div class="div_container">
                 <div class="gauche">
                     <p>BTP Solutions est une entreprise de <br>Bâtiment et Travaux Publics dédiée à la <br>réalisation de projets d'infrastructures <br>de
                     haute qualité. Avec une équipe <br>d'experts passionnés et expérimentés, <br>nous nous engageons à fournir des <br>solutions
@@ -129,7 +129,7 @@
                         <label for="message">Message</label>
                         <textarea name="message" id="message" placeholder="Message" rows="5" maxlength="200" required>Message</textarea>
                     </div>
-                    <button type="submit">Envoyer</button>
+                    <button id="btn" type="submit">Envoyer</button>
                 </form>
                 <div class="maps">
                     <div class="adressse_tel">
