--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
            <h2>Nos Services</h2>
            <div class="container">
               <div class="service">
-                 <img src="assets/images/service-1.webp" alt="image service-1">
+                 <img src="assets/images/service-1.webp" alt="image Construction de bâtiments">
                  <h3>Construction de bâtiments</h3>
                  <p>Des constructions robustes et esthétiques pour tous vos besoins résidentiels, commerciaux et industriels</p>
               </div>
               <div class="service">
-                <img src="assets/images/service-2.webp" alt=" image service-2">
+                <img src="assets/images/service-2.webp" alt="image Travaux publics">
                 <h3>Travaux publics</h3>
                 <p>Des infrastructures publiques fiables et durables, incluant routes, ponts et aménagements urbains.</p>
               </div>
               <div class="service">
-                <img src="assets/images/service-3.webp" alt="image service-3">
+                <img src="assets/images/service-3.webp" alt="image Rénovation et réhabilitation">
                 <h3>Rénovation et réhabilitation</h3>
                 <p>Redonnez vie à vos bâtiments avec nos solutions de rénovation complètes et innovantes.</p>
               </div>
@@ -75,7 +75,7 @@
             <div class="content">
                 <div class="temoin">
                     <div class="div_haut">
-                        <img src="assets/images/temoin1-img.png" alt="image Temoin-1" class="img_temon">
+                        <img src="assets/images/temoin1-img.png" alt="image John Morik" class="img_temon">
                         <div class="nom_temoin">
                             <h6>John Morik</h6>
                             <img src="assets/images/Stars.svg" alt="image etoile">
@@ -87,7 +87,7 @@
                 </div>
                 <div class="temoin">
                     <div class="div_haut">
-                        <img src="assets/images/temoin2-img.png" alt=" image Temoin-2" class="img_temon">
+                        <img src="assets/images/temoin2-img.png" alt=" image Mari Diani" class="img_temon">
                         <div class="nom_temoin">
                             <h6>Mari Diani</h6>
                             <img src="assets/images/Stars.svg" alt="image etoile">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="temoin">
                     <div class="div_haut">
-                        <img src="assets/images/temoin3-img.png" alt="image Temoin-3" class="img_temon">
+                        <img src="assets/images/temoin3-img.png" alt="image Léo morik" class="img_temon">
                         <div class="nom_temoin">
                             <h6>Léo morik</h6>
                             <img src="assets/images/Stars.svg" alt="image etoile">
